--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@mui/material": "^5.15.3",
     "axios": "^1.6.5",
     "gsap": "^3.12.4",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "server-only": "^0.0.1",
